--- a/booking.html
+++ b/booking.html
@@ -25,7 +25,7 @@
         </header>
         <nav class="nav-menu" id="nav-menu">
     <ul>
-      <li class="menu-list"><a href="assignment.html"><i class="fas fa-house"></i> Home</a></li>
+      <li class="menu-list"><a href="index.html"><i class="fas fa-house"></i> Home</a></li>
       <li class="menu-list"><a href="staff.html"><i class="fas fa-users"></i> Staff</a></li>            
       <li class="menu-list"><a href="timetable.html"><i class="fas fa-calendar-check"></i>Timetable Schedule</a></li>                       
                               
@@ -112,3 +112,4 @@
   </script>
     </body>
     </html>
+
