--- a/emergency.html
+++ b/emergency.html
@@ -28,7 +28,7 @@
   
   <nav class="nav-menu" id="nav-menu">
     <ul>
-      <li class="menu-list"><a href="assignment.html"><i class="fas fa-house"></i> Home</a></li>
+      <li class="menu-list"><a href="index.html"><i class="fas fa-house"></i> Home</a></li>
       <li class="menu-list"><a href="staff.html"><i class="fas fa-users"></i> Staff</a></li>            
       <li class="menu-list"><a href="timetable.html"><i class="fas fa-calendar-check"></i>Timetable Schedule</a></li>                       
       <li class="menu-list"><a href="booking.html"><i class="fas fa-book"></i> Booking Section</a></li>                        
@@ -91,4 +91,5 @@
   </script>
   </body>
   </html>
+
     
