--- a/staff.html
+++ b/staff.html
@@ -28,7 +28,7 @@
         </header>
         <nav class="nav-menu" id="nav-menu">
     <ul>
-      <li class="menu-list"><a href="assignment.html"><i class="fas fa-house"></i> Home</a></li>            
+      <li class="menu-list"><a href="index.html"><i class="fas fa-house"></i> Home</a></li>            
       <li class="menu-list"><a href="timetable.html"><i class="fas fa-calendar-check"></i>Timetable Schedule</a></li>                       
       <li class="menu-list"><a href="booking.html"><i class="fas fa-book"></i> Booking Section</a></li>                        
       <li class="menu-list"><a href="emergency.html"><i class="fas fa-first-aid"></i> Emergency Alert</a></li>    
@@ -119,4 +119,5 @@
   </script>   
 </body>
 </html>
+
 
