Fix HTML formatting and update timetable content

--- a/timetable.html
+++ b/timetable.html
@@ -25,7 +25,7 @@
         </header>
         <nav class="nav-menu" id="nav-menu">
     <ul >
-      <li class="menu-list"><a href="assignment.html"><i class="fas fa-house"></i> Home</a></li>            
+      <li class="menu-list"><a href="index.html"><i class="fas fa-house"></i> Home</a></li>            
       <li class="menu-list"><a href="staff.html"><i class="fas fa-users"></i>Staff</a></li>                       
       <li class="menu-list"><a href="booking.html"><i class="fas fa-book"></i> Booking Section</a></li>                        
       <li class="menu-list"><a href="emergency.html"><i class="fas fa-first-aid"></i> Emergency Alert</a></li>    
@@ -92,4 +92,5 @@
   </script>
     </body>
 </html>
+
   
