--- a/timetable.html
+++ b/timetable.html
@@ -45,6 +45,7 @@
 </section>
 <section class="main">
    <h2> <i class="fa-solid fa-circle-user"></i> Driver& Bus Info</h2>
+    <div class="table-container">
    <table>
     <thead>
     <tr><th>BUS</th><th>DRIVER</th><th>CONTACT</th></tr>
@@ -54,6 +55,7 @@
         <tr>><td>BUS 02(30SEATS)</td><td>driver 02</td><td>07123456789</td></tr>
     </tbody>
    </table>
+    </div>
 </section>
   <section class="main">
    <h2><i class="fa-solid fa-user"></i> commuter's note</h2>
@@ -94,4 +96,5 @@
 </html>
 
   
+
 
