--- a/staff.html
+++ b/staff.html
@@ -14,12 +14,15 @@
       
 </head> 
 <body>
-  <header class="main-header">
-        <div class="header-top">
-            <div class="logo">
-                <i class="fas fa-users"></i>
-                <div class="logo-text">Department Staff</div>
-            </div>
+<header class="main-header">  
+     <div class="logo">      
+      <figure>              
+       <img src="images/logo.jpeg">
+       <div class="center">
+          <figcaption>STAFF</figcaption>
+        </div>
+      </figure>
+     </div>
             <div class="menu-icon" id="menu-icon">
     <span></span>  
     <span></span>
@@ -119,6 +122,7 @@
   </script>   
 </body>
 </html>
+
 
 
 
